// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`py#agent generator > should create DynamoDB checkpoint table and S3 offload bucket infrastructure when session is dynamodb-s3 (Terraform) > terraform-agent.tf (dynamodb-s3) 1`] = `
"terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.62.0"
    }
    random = {
      source  = "hashicorp/random"
      version = "3.9.0"
    }
  }
}

variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "appconfig_application_id" {
  description = "ID of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_id\`). The agent reads its runtime configuration from this application."
  type        = string
}

variable "asset_ecr_repository_url" {
  description = "URL of the shared asset ECR repository the agent's image is published to. Instantiate the \`core/asset-ecr\` module once per deployment and pass its \`repository_url\` output here."
  type        = string
}

variable "asset_ecr_repository_arn" {
  description = "ARN of the shared asset ECR repository (from \`core/asset-ecr.repository_arn\`), used to scope the runtime's image pull grant to it."
  type        = string
}

variable "session_force_destroy" {
  description = "Whether to allow the session bucket to be destroyed even if it still contains objects."
  type        = bool
  default     = false
}

variable "session_deletion_protection_enabled" {
  description = "Whether to enable deletion protection on the session checkpoint table."
  type        = bool
  default     = true
}

variable "appconfig_application_arn" {
  description = "ARN of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_arn\`). Used to scope the IAM read permission granted to the agent runtime."
  type        = string
}

data "aws_region" "current" {}
data "aws_caller_identity" "current" {}

locals {
  # Delivery source/destination names have a 60 character maximum. Truncate
  # the agent name so these stay within the limit.
  session_access_logs_name_prefix = substr("dynamodb-terraform-agent", 0, 30)
}

# Uniquifies resource names below so this construct can be deployed more than
# once (e.g. across stages) within the same account/region.
resource "random_id" "session_unique_suffix" {
  byte_length = 4
}

# KMS key encrypting the session bucket and its server access logs.
resource "aws_kms_key" "session" {
  description             = "KMS key for dynamodb-terraform-agent agent session data"
  enable_key_rotation     = true
  deletion_window_in_days = 7

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid       = "EnableIAMUserPermissions"
        Effect    = "Allow"
        Principal = { AWS = "arn:aws:iam::\${data.aws_caller_identity.current.account_id}:root" }
        Action    = "kms:*"
        Resource  = "*"
      },
      {
        Sid       = "AllowCloudWatchLogs"
        Effect    = "Allow"
        Principal = { Service = "logs.\${data.aws_region.current.region}.amazonaws.com" }
        Action = [
          "kms:Encrypt",
          "kms:Decrypt",
          "kms:ReEncrypt*",
          "kms:GenerateDataKey*",
          "kms:DescribeKey"
        ]
        Resource = "*"
        Condition = {
          ArnLike = {
            "kms:EncryptionContext:aws:logs:arn" = "arn:aws:logs:\${data.aws_region.current.region}:\${data.aws_caller_identity.current.account_id}:log-group:*"
          }
        }
      }
    ]
  })

  tags = var.tags
}

# CloudWatch log group receiving the session bucket's server access logs.
resource "aws_cloudwatch_log_group" "session_access_logs" {
  name              = "/aws/s3/dynamodb-terraform-agent-session-access-logs-\${random_id.session_unique_suffix.hex}"
  retention_in_days = 365
  kms_key_id        = aws_kms_key.session.arn

  tags = var.tags
}

# Bucket storing the agent's session data
resource "aws_s3_bucket" "session" {
  bucket = "dynamodb-terraform-agent-sessions-\${random_id.session_unique_suffix.hex}"
  #checkov:skip=CKV2_AWS_61:Lifecycle configuration not required for session data
  #checkov:skip=CKV_AWS_144:Cross-region replication not required for session data
  #checkov:skip=CKV2_AWS_62:Event notifications not required for session data
  #checkov:skip=CKV_AWS_18:Server access logs are delivered to CloudWatch Logs (see aws_cloudwatch_log_delivery.session)
  #checkov:skip=CKV_AWS_21:Session data does not need versioning enabled
  force_destroy = var.session_force_destroy
}

resource "aws_s3_bucket_server_side_encryption_configuration" "session" {
  bucket = aws_s3_bucket.session.id

  rule {
    apply_server_side_encryption_by_default {
      kms_master_key_id = aws_kms_key.session.arn
      sse_algorithm     = "aws:kms"
    }
  }
}

resource "aws_s3_bucket_public_access_block" "session" {
  bucket = aws_s3_bucket.session.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_policy" "session" {
  bucket = aws_s3_bucket.session.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid       = "DenyInsecureConnections"
        Effect    = "Deny"
        Principal = "*"
        Action    = "s3:*"
        Resource = [
          aws_s3_bucket.session.arn,
          "\${aws_s3_bucket.session.arn}/*"
        ]
        Condition = {
          Bool = {
            "aws:SecureTransport" = "false"
          }
        }
      }
    ]
  })
}

# Deliver the session bucket's server access logs to CloudWatch Logs.
resource "aws_cloudwatch_log_delivery_source" "session" {
  name         = "\${local.session_access_logs_name_prefix}-access-logs-source-\${random_id.session_unique_suffix.hex}"
  log_type     = "S3_SERVER_ACCESS_LOGS"
  resource_arn = aws_s3_bucket.session.arn
}

resource "aws_cloudwatch_log_delivery_destination" "session" {
  name = "\${local.session_access_logs_name_prefix}-access-logs-dest-\${random_id.session_unique_suffix.hex}"

  delivery_destination_configuration {
    destination_resource_arn = aws_cloudwatch_log_group.session_access_logs.arn
  }
}

resource "aws_cloudwatch_log_delivery" "session" {
  delivery_source_name     = aws_cloudwatch_log_delivery_source.session.name
  delivery_destination_arn = aws_cloudwatch_log_delivery_destination.session.arn
}

# Unified checkpoints/writes table, matching the schema
# langgraph_checkpoint_aws.DynamoDBSaver expects (PK/SK, TTL on \`ttl\`).
resource "aws_dynamodb_table" "session" {
  name         = "dynamodb-terraform-agent-checkpoints-\${random_id.session_unique_suffix.hex}"
  billing_mode = "PAY_PER_REQUEST"
  hash_key     = "PK"
  range_key    = "SK"

  attribute {
    name = "PK"
    type = "S"
  }

  attribute {
    name = "SK"
    type = "S"
  }

  ttl {
    attribute_name = "ttl"
    enabled        = true
  }

  point_in_time_recovery {
    enabled = true
  }

  server_side_encryption {
    enabled     = true
    kms_key_arn = aws_kms_key.session.arn
  }

  deletion_protection_enabled = var.session_deletion_protection_enabled

  tags = var.tags
}

module "agent_core_runtime" {
  source = "../../../core/agent-core-container"
  agent_runtime_name = "DynamodbTerraformAgent"
  docker_image_tag = "proj-dynamodb-terraform-agent:latest"
  asset_ecr_repository_url = var.asset_ecr_repository_url
  asset_ecr_repository_arn = var.asset_ecr_repository_arn
  server_protocol = "HTTP"
  enable_vpc = var.enable_vpc
  vpc_id = var.vpc_id
  subnet_ids = var.subnet_ids

  env = merge({
    RUNTIME_CONFIG_APP_ID = var.appconfig_application_id
  }, var.env)
  additional_iam_policy_statements = concat([
    {
      Effect   = "Allow"
      Action   = [
        "appconfig:StartConfigurationSession",
        "appconfig:GetLatestConfiguration"
      ]
      Resource = ["\${var.appconfig_application_arn}/*"]
    },
    # Grant access for the agent to invoke bedrock models
    {
      Effect = "Allow"
      Action = [
        "bedrock:InvokeModel",
        "bedrock:InvokeModelWithResponseStream"
      ]
      Resource = [
        "arn:aws:bedrock:*:*:foundation-model/*",
        "arn:aws:bedrock:*:*:inference-profile/*"
      ]
    },
    # Grant access for the agent to read/write its session data
    {
      Effect = "Allow"
      Action = [
        "s3:GetObject",
        "s3:PutObject",
        "s3:DeleteObject",
        "s3:ListBucket"
      ]
      Resource = [
        aws_s3_bucket.session.arn,
        "\${aws_s3_bucket.session.arn}/*"
      ]
    },
    # Grant access for the agent to use the session bucket's KMS key
    {
      Effect = "Allow"
      Action = [
        "kms:Decrypt",
        "kms:GenerateDataKey*"
      ]
      Resource = [aws_kms_key.session.arn]
    },
    # Grant access for the agent to read/write its checkpoint table
    {
      Effect = "Allow"
      Action = [
        "dynamodb:GetItem",
        "dynamodb:PutItem",
        "dynamodb:Query",
        "dynamodb:BatchGetItem",
        "dynamodb:BatchWriteItem"
      ]
      Resource = [aws_dynamodb_table.session.arn]
    }
  ], var.additional_iam_policy_statements)
  tags = var.tags
}

# Add agent runtime ARN to runtime config
module "add_agent_runtime_to_runtime_config" {
  source = "../../../core/runtime-config/entry"

  namespace = "agentcore"
  key       = "agentRuntimes"
  value     = { "DynamodbTerraformAgent" = { arn = module.agent_core_runtime.agent_core_runtime_arn, session = { tableName = aws_dynamodb_table.session.name, bucketName = aws_s3_bucket.session.bucket } } }

  depends_on = [module.agent_core_runtime]
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the agent core runtime role"
  value       = module.agent_core_runtime.agent_core_runtime_role_arn
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime"
  value       = module.agent_core_runtime.agent_core_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime"
  value       = module.agent_core_runtime.invocation_url
}

output "appconfig_application_id" {
  description = "AppConfig Application ID for runtime config (passthrough of the shared \`appconfig_application_id\` input)."
  value       = var.appconfig_application_id
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = module.agent_core_runtime.security_group_id
}
"
`;

exports[`py#agent generator > should match snapshot for Terraform generated files > terraform-agent.tf 1`] = `
"terraform {
  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.62.0"
    }
    random = {
      source  = "hashicorp/random"
      version = "3.9.0"
    }
  }
}

variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "appconfig_application_id" {
  description = "ID of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_id\`). The agent reads its runtime configuration from this application."
  type        = string
}

variable "asset_ecr_repository_url" {
  description = "URL of the shared asset ECR repository the agent's image is published to. Instantiate the \`core/asset-ecr\` module once per deployment and pass its \`repository_url\` output here."
  type        = string
}

variable "asset_ecr_repository_arn" {
  description = "ARN of the shared asset ECR repository (from \`core/asset-ecr.repository_arn\`), used to scope the runtime's image pull grant to it."
  type        = string
}

variable "session_force_destroy" {
  description = "Whether to allow the session bucket to be destroyed even if it still contains objects."
  type        = bool
  default     = false
}

variable "appconfig_application_arn" {
  description = "ARN of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_arn\`). Used to scope the IAM read permission granted to the agent runtime."
  type        = string
}

data "aws_region" "current" {}
data "aws_caller_identity" "current" {}

locals {
  # Delivery source/destination names have a 60 character maximum. Truncate
  # the agent name so these stay within the limit.
  session_access_logs_name_prefix = substr("terraform-snapshot-agent", 0, 30)
}

# Uniquifies resource names below so this construct can be deployed more than
# once (e.g. across stages) within the same account/region.
resource "random_id" "session_unique_suffix" {
  byte_length = 4
}

# KMS key encrypting the session bucket and its server access logs.
resource "aws_kms_key" "session" {
  description             = "KMS key for terraform-snapshot-agent agent session data"
  enable_key_rotation     = true
  deletion_window_in_days = 7

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid       = "EnableIAMUserPermissions"
        Effect    = "Allow"
        Principal = { AWS = "arn:aws:iam::\${data.aws_caller_identity.current.account_id}:root" }
        Action    = "kms:*"
        Resource  = "*"
      },
      {
        Sid       = "AllowCloudWatchLogs"
        Effect    = "Allow"
        Principal = { Service = "logs.\${data.aws_region.current.region}.amazonaws.com" }
        Action = [
          "kms:Encrypt",
          "kms:Decrypt",
          "kms:ReEncrypt*",
          "kms:GenerateDataKey*",
          "kms:DescribeKey"
        ]
        Resource = "*"
        Condition = {
          ArnLike = {
            "kms:EncryptionContext:aws:logs:arn" = "arn:aws:logs:\${data.aws_region.current.region}:\${data.aws_caller_identity.current.account_id}:log-group:*"
          }
        }
      }
    ]
  })

  tags = var.tags
}

# CloudWatch log group receiving the session bucket's server access logs.
resource "aws_cloudwatch_log_group" "session_access_logs" {
  name              = "/aws/s3/terraform-snapshot-agent-session-access-logs-\${random_id.session_unique_suffix.hex}"
  retention_in_days = 365
  kms_key_id        = aws_kms_key.session.arn

  tags = var.tags
}

# Bucket storing the agent's session data
resource "aws_s3_bucket" "session" {
  bucket = "terraform-snapshot-agent-sessions-\${random_id.session_unique_suffix.hex}"
  #checkov:skip=CKV2_AWS_61:Lifecycle configuration not required for session data
  #checkov:skip=CKV_AWS_144:Cross-region replication not required for session data
  #checkov:skip=CKV2_AWS_62:Event notifications not required for session data
  #checkov:skip=CKV_AWS_18:Server access logs are delivered to CloudWatch Logs (see aws_cloudwatch_log_delivery.session)
  #checkov:skip=CKV_AWS_21:Session data does not need versioning enabled
  force_destroy = var.session_force_destroy
}

resource "aws_s3_bucket_server_side_encryption_configuration" "session" {
  bucket = aws_s3_bucket.session.id

  rule {
    apply_server_side_encryption_by_default {
      kms_master_key_id = aws_kms_key.session.arn
      sse_algorithm     = "aws:kms"
    }
  }
}

resource "aws_s3_bucket_public_access_block" "session" {
  bucket = aws_s3_bucket.session.id

  block_public_acls       = true
  block_public_policy     = true
  ignore_public_acls      = true
  restrict_public_buckets = true
}

resource "aws_s3_bucket_policy" "session" {
  bucket = aws_s3_bucket.session.id

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid       = "DenyInsecureConnections"
        Effect    = "Deny"
        Principal = "*"
        Action    = "s3:*"
        Resource = [
          aws_s3_bucket.session.arn,
          "\${aws_s3_bucket.session.arn}/*"
        ]
        Condition = {
          Bool = {
            "aws:SecureTransport" = "false"
          }
        }
      }
    ]
  })
}

# Deliver the session bucket's server access logs to CloudWatch Logs.
resource "aws_cloudwatch_log_delivery_source" "session" {
  name         = "\${local.session_access_logs_name_prefix}-access-logs-source-\${random_id.session_unique_suffix.hex}"
  log_type     = "S3_SERVER_ACCESS_LOGS"
  resource_arn = aws_s3_bucket.session.arn
}

resource "aws_cloudwatch_log_delivery_destination" "session" {
  name = "\${local.session_access_logs_name_prefix}-access-logs-dest-\${random_id.session_unique_suffix.hex}"

  delivery_destination_configuration {
    destination_resource_arn = aws_cloudwatch_log_group.session_access_logs.arn
  }
}

resource "aws_cloudwatch_log_delivery" "session" {
  delivery_source_name     = aws_cloudwatch_log_delivery_source.session.name
  delivery_destination_arn = aws_cloudwatch_log_delivery_destination.session.arn
}

module "agent_core_runtime" {
  source = "../../../core/agent-core-container"
  agent_runtime_name = "TerraformSnapshotAgent"
  docker_image_tag = "proj-terraform-snapshot-agent:latest"
  asset_ecr_repository_url = var.asset_ecr_repository_url
  asset_ecr_repository_arn = var.asset_ecr_repository_arn
  server_protocol = "HTTP"
  enable_vpc = var.enable_vpc
  vpc_id = var.vpc_id
  subnet_ids = var.subnet_ids

  env = merge({
    RUNTIME_CONFIG_APP_ID = var.appconfig_application_id
  }, var.env)
  additional_iam_policy_statements = concat([
    {
      Effect   = "Allow"
      Action   = [
        "appconfig:StartConfigurationSession",
        "appconfig:GetLatestConfiguration"
      ]
      Resource = ["\${var.appconfig_application_arn}/*"]
    },
    # Grant access for the agent to invoke bedrock models
    {
      Effect = "Allow"
      Action = [
        "bedrock:InvokeModel",
        "bedrock:InvokeModelWithResponseStream"
      ]
      Resource = [
        "arn:aws:bedrock:*:*:foundation-model/*",
        "arn:aws:bedrock:*:*:inference-profile/*"
      ]
    },
    # Grant access for the agent to read/write its session data
    {
      Effect = "Allow"
      Action = [
        "s3:GetObject",
        "s3:PutObject",
        "s3:DeleteObject",
        "s3:ListBucket"
      ]
      Resource = [
        aws_s3_bucket.session.arn,
        "\${aws_s3_bucket.session.arn}/*"
      ]
    },
    # Grant access for the agent to use the session bucket's KMS key
    {
      Effect = "Allow"
      Action = [
        "kms:Decrypt",
        "kms:GenerateDataKey*"
      ]
      Resource = [aws_kms_key.session.arn]
    }
  ], var.additional_iam_policy_statements)
  tags = var.tags
}

# Add agent runtime ARN to runtime config
module "add_agent_runtime_to_runtime_config" {
  source = "../../../core/runtime-config/entry"

  namespace = "agentcore"
  key       = "agentRuntimes"
  value     = { "TerraformSnapshotAgent" = { arn = module.agent_core_runtime.agent_core_runtime_arn, session = { bucketName = aws_s3_bucket.session.bucket } } }

  depends_on = [module.agent_core_runtime]
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the agent core runtime role"
  value       = module.agent_core_runtime.agent_core_runtime_role_arn
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime"
  value       = module.agent_core_runtime.agent_core_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime"
  value       = module.agent_core_runtime.invocation_url
}

output "appconfig_application_id" {
  description = "AppConfig Application ID for runtime config (passthrough of the shared \`appconfig_application_id\` input)."
  value       = var.appconfig_application_id
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = module.agent_core_runtime.security_group_id
}
"
`;

exports[`py#agent generator > should match snapshot for Terraform generated files > terraform-agent-core-runtime.tf 1`] = `
"terraform {
  required_version = ">= 1.0"

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "6.62.0"
    }
    null = {
      source  = "hashicorp/null"
      version = "3.3.1"
    }
    random = {
      source  = "hashicorp/random"
      version = "3.9.0"
    }
  }
}

# Variables
variable "agent_runtime_name" {
  description = "Name of the agent runtime"
  type        = string
  validation {
    condition     = can(regex("^[a-zA-Z][a-zA-Z0-9_]{0,42}$", var.agent_runtime_name))
    error_message = "Value must start with a letter and contain only letters, numbers, and underscores (1-43 characters)."
  }
}

variable "server_protocol" {
  description = "Server protocol for the agent runtime (HTTP, MCP, or A2A)"
  type        = string
  default     = "HTTP"
  validation {
    condition     = contains(["MCP", "HTTP", "A2A"], var.server_protocol)
    error_message = "Protocol type must be either 'mcp', 'http', or 'a2a'."
  }
}

variable "authorizer_configuration" {
  description = "Authorization configuration for authenticating incoming requests"
  type = object({
    custom_jwt_authorizer = optional(object({
      discovery_url    = string
      allowed_audience = optional(list(string))
      allowed_clients  = optional(list(string))
    }))
  })
  default = null
}

variable "container_configuration" {
  description = "Container artifact for this runtime. Set exactly one of this or \`code_configuration\`; the \`agent-core-container\` module renders it."
  type = object({
    container_uri = string
  })
  default = null
}

variable "code_configuration" {
  description = "Code artifact for this runtime. Set exactly one of this or \`container_configuration\`; the \`agent-core-code\` module renders it."
  type = object({
    entry_point = list(string)
    runtime     = string
    s3_bucket   = string
    s3_key      = string
  })
  default = null

  validation {
    # Evaluated at plan time, since Terraform defers validation that reads
    # another variable.
    condition     = (var.code_configuration == null) != (var.container_configuration == null)
    error_message = "Set exactly one of code_configuration or container_configuration."
  }
}

variable "artifact_dependencies" {
  description = "Resources the artifact is produced by (an image push or a code upload), so the runtime is created only once they exist."
  type        = list(any)
  default     = []
}

variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null

  validation {
    condition     = !var.enable_vpc || (var.vpc_id != null && var.subnet_ids != null)
    error_message = "vpc_id and subnet_ids must be set when enable_vpc is true."
  }
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# Data sources
data "aws_caller_identity" "current" {}
data "aws_region" "current" {}

locals {
  aws_account_id = data.aws_caller_identity.current.account_id
  aws_region     = data.aws_region.current.id
}

# Random ID for bucket suffix to ensure uniqueness
resource "random_id" "unique_suffix" {
  byte_length = 4
}


# IAM Role for Agent Core Runtime
resource "aws_iam_role" "agent_core_runtime_role" {
  name = "\${var.agent_runtime_name}-AgentCoreRuntimeRole-\${random_id.unique_suffix.hex}"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Sid    = "AgentCoreAssumeRolePolicy"
        Effect = "Allow"
        Principal = {
          Service = "bedrock-agentcore.amazonaws.com"
        }
        Action = "sts:AssumeRole"
        Condition = {
          StringEquals = {
            "aws:SourceAccount" = local.aws_account_id
          }
          ArnLike = {
            "aws:SourceArn" = "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:*"
          }
        }
      }
    ]
  })

  tags = var.tags
}

# IAM Policy for Agent Core Runtime
resource "aws_iam_policy" "agent_core_runtime_policy" {
  name        = "\${var.agent_runtime_name}-QueryAgentPolicy-\${random_id.unique_suffix.hex}"
  description = "Restricted policy for Agent"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = concat([
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:DescribeLogStreams",
          "logs:CreateLogGroup"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:/aws/bedrock-agentcore/runtimes/*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:DescribeLogGroups"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "logs:CreateLogStream",
          "logs:PutLogEvents"
        ],
        "Resource" : [
          "arn:aws:logs:\${local.aws_region}:\${local.aws_account_id}:log-group:/aws/bedrock-agentcore/runtimes/*:log-stream:*"
        ]
      },
      {
        "Effect" : "Allow",
        "Action" : [
          "xray:PutTraceSegments",
          "xray:PutTelemetryRecords",
          "xray:GetSamplingRules",
          "xray:GetSamplingTargets"
        ],
        "Resource" : ["*"]
      },
      {
        "Effect" : "Allow",
        "Resource" : "*",
        "Action" : "cloudwatch:PutMetricData",
        "Condition" : {
          "StringEquals" : {
            "cloudwatch:namespace" : "bedrock-agentcore"
          }
        }
      },
      {
        "Sid" : "GetAgentAccessToken",
        "Effect" : "Allow",
        "Action" : [
          "bedrock-agentcore:GetWorkloadAccessToken",
          "bedrock-agentcore:GetWorkloadAccessTokenForJWT",
          "bedrock-agentcore:GetWorkloadAccessTokenForUserId"
        ],
        "Resource" : [
          "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:workload-identity-directory/default",
          "arn:aws:bedrock-agentcore:\${local.aws_region}:\${local.aws_account_id}:workload-identity-directory/default/workload-identity/*"
        ]
      }
    ], var.additional_iam_policy_statements)
  })

  tags = var.tags
}

# Attach the restricted policy to the role
resource "aws_iam_role_policy_attachment" "agent_core_policy" {
  role       = aws_iam_role.agent_core_runtime_role.name
  policy_arn = aws_iam_policy.agent_core_runtime_policy.arn
}


# Security group for the agent core runtime, used when running inside a VPC
resource "aws_security_group" "agent_core_runtime" {
  count = var.enable_vpc ? 1 : 0

  #checkov:skip=CKV2_AWS_5:Attached to the runtime via network_configuration; Checkov cannot resolve this reference
  name_prefix = "\${var.agent_runtime_name}-runtime-"
  description = "Security group for the \${var.agent_runtime_name} agent core runtime"
  vpc_id      = var.vpc_id
  tags        = var.tags
}

resource "aws_vpc_security_group_egress_rule" "agent_core_runtime_https" {
  count = var.enable_vpc ? 1 : 0

  security_group_id = aws_security_group.agent_core_runtime[0].id
  cidr_ipv4         = "0.0.0.0/0"
  from_port         = 443
  to_port           = 443
  ip_protocol       = "tcp"
  description       = "Allow outbound HTTPS to AWS service endpoints"
}

# Bedrock AgentCore Agent Runtime
resource "aws_bedrockagentcore_agent_runtime" "agent_runtime" {
  agent_runtime_name = "\${var.agent_runtime_name}_\${random_id.unique_suffix.hex}"
  description        = "Agent Runtime for \${var.agent_runtime_name}"
  role_arn           = aws_iam_role.agent_core_runtime_role.arn

  agent_runtime_artifact {
    dynamic "container_configuration" {
      for_each = var.container_configuration != null ? [var.container_configuration] : []
      content {
        container_uri = container_configuration.value.container_uri
      }
    }

    dynamic "code_configuration" {
      for_each = var.code_configuration != null ? [var.code_configuration] : []
      content {
        entry_point = code_configuration.value.entry_point
        runtime     = code_configuration.value.runtime

        code {
          s3 {
            bucket = code_configuration.value.s3_bucket
            prefix = code_configuration.value.s3_key
          }
        }
      }
    }
  }

  environment_variables = length(var.env) > 0 ? var.env : null

  dynamic "authorizer_configuration" {
    for_each = var.authorizer_configuration != null && try(var.authorizer_configuration.custom_jwt_authorizer, null) != null ? [var.authorizer_configuration.custom_jwt_authorizer] : []
    content {
      custom_jwt_authorizer {
        discovery_url    = authorizer_configuration.value.discovery_url
        allowed_audience = authorizer_configuration.value.allowed_audience
        allowed_clients  = authorizer_configuration.value.allowed_clients
      }
    }
  }

  # Receive the caller's Authorization header (validated by the JWT authorizer).
  dynamic "request_header_configuration" {
    for_each = var.authorizer_configuration != null && try(var.authorizer_configuration.custom_jwt_authorizer, null) != null ? [1] : []
    content {
      request_header_allowlist = ["Authorization"]
    }
  }

  network_configuration {
    network_mode = var.enable_vpc ? "VPC" : "PUBLIC"

    dynamic "network_mode_config" {
      for_each = var.enable_vpc ? [1] : []
      content {
        security_groups = [aws_security_group.agent_core_runtime[0].id]
        subnets         = var.subnet_ids
      }
    }
  }

  protocol_configuration {
    server_protocol = var.server_protocol
  }

  tags = var.tags

  depends_on = [
    var.artifact_dependencies,
    aws_iam_role_policy_attachment.agent_core_policy
  ]
}

# MCP consumers (e.g. gateway targets, which fetch tools at creation) can race
# the runtime's first cold start, so probe it until it serves MCP. The ARN
# output is routed through this resource so consumers wait for readiness.
resource "null_resource" "runtime_ready" {
  count = var.server_protocol == "MCP" ? 1 : 0

  triggers = {
    runtime_arn = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_arn
  }

  provisioner "local-exec" {
    command = <<-EOT
      uv run --with boto3==1.43.83 python -c "
import boto3
import json
import os
import time
import uuid

runtime_arn = os.environ['RUNTIME_ARN']
client = boto3.client('bedrock-agentcore')
initialize_request = json.dumps({
    'jsonrpc': '2.0',
    'id': 1,
    'method': 'initialize',
    'params': {
        'protocolVersion': '2025-03-26',
        'capabilities': {},
        'clientInfo': {'name': 'readiness-probe', 'version': '1.0'},
    },
})

deadline = time.time() + 5 * 60
while True:
    try:
        client.invoke_agent_runtime(
            agentRuntimeArn=runtime_arn,
            runtimeSessionId=f'readiness-probe-{uuid.uuid4()}',
            contentType='application/json',
            accept='application/json, text/event-stream',
            payload=initialize_request,
        )
        break
    except Exception:
        if time.time() >= deadline:
            raise
        time.sleep(5)

print(f'Runtime {runtime_arn} is serving MCP')
"
    EOT
    environment = {
      RUNTIME_ARN = self.triggers.runtime_arn
    }
  }
}

# Outputs
locals {
  # For MCP runtimes the ARN flows through the readiness probe, so consumers
  # wait until the runtime serves MCP.
  ready_runtime_arn = var.server_protocol == "MCP" ? null_resource.runtime_ready[0].triggers.runtime_arn : aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_arn
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the Agent Core Runtime IAM role"
  value       = aws_iam_role.agent_core_runtime_role.arn
}

output "agent_core_runtime_role_name" {
  description = "Name of the Agent Core Runtime IAM role"
  value       = aws_iam_role.agent_core_runtime_role.name
}

output "agent_runtime_name" {
  description = "Name of the deployed agent runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_name
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime. For MCP runtimes the value flows through the readiness probe, so consumers wait until the runtime serves MCP."
  value       = local.ready_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime. MCP runtimes get the MCP endpoint (e.g. for use as a Gateway target endpoint), A2A runtimes the A2A endpoint (trailing slash required). For MCP runtimes the value flows through the readiness probe, so consumers wait until the runtime serves MCP."
  value       = "https://bedrock-agentcore.\${local.aws_region}.amazonaws.com/runtimes/\${urlencode(local.ready_runtime_arn)}/invocations\${var.server_protocol == "A2A" ? "/" : "?qualifier=DEFAULT"}"
}

output "agent_runtime_id" {
  description = "ID of the Bedrock Agent Core runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_id
}

output "agent_runtime_version" {
  description = "Version of the Bedrock Agent Core runtime"
  value       = aws_bedrockagentcore_agent_runtime.agent_runtime.agent_runtime_version
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = var.enable_vpc ? aws_security_group.agent_core_runtime[0].id : null
}
"
`;

exports[`py#agent generator > should not create session bucket infrastructure when session is in-memory (Terraform) > terraform-agent.tf (in-memory) 1`] = `
"variable "env" {
  description = "Environment variables to pass to the agent core runtime"
  type        = map(string)
  default     = {}
}

variable "additional_iam_policy_statements" {
  description = "Additional IAM policy statements to attach to the agent core runtime role"
  type = list(object({
    Effect   = string
    Action   = list(string)
    Resource = list(string)
  }))
  default = []
}

variable "tags" {
  description = "Tags to apply to resources"
  type        = map(string)
  default     = {}
}

# VPC Configuration (optional)
variable "enable_vpc" {
  description = "Run the agent core runtime inside a VPC. Set alongside vpc_id/subnet_ids."
  type        = bool
  default     = false
}

variable "vpc_id" {
  description = "VPC ID to run the agent core runtime in. Required when enable_vpc is true."
  type        = string
  default     = null
}

variable "subnet_ids" {
  description = "Subnet IDs to run the agent core runtime in. Required when enable_vpc is true."
  type        = list(string)
  default     = null
}

variable "appconfig_application_id" {
  description = "ID of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_id\`). The agent reads its runtime configuration from this application."
  type        = string
}

variable "asset_ecr_repository_url" {
  description = "URL of the shared asset ECR repository the agent's image is published to. Instantiate the \`core/asset-ecr\` module once per deployment and pass its \`repository_url\` output here."
  type        = string
}

variable "asset_ecr_repository_arn" {
  description = "ARN of the shared asset ECR repository (from \`core/asset-ecr.repository_arn\`), used to scope the runtime's image pull grant to it."
  type        = string
}

variable "appconfig_application_arn" {
  description = "ARN of the shared runtime-config AppConfig application (from \`core/runtime-config/appconfig.application_arn\`). Used to scope the IAM read permission granted to the agent runtime."
  type        = string
}

module "agent_core_runtime" {
  source = "../../../core/agent-core-container"
  agent_runtime_name = "InMemoryTerraformAgent"
  docker_image_tag = "proj-in-memory-terraform-agent:latest"
  asset_ecr_repository_url = var.asset_ecr_repository_url
  asset_ecr_repository_arn = var.asset_ecr_repository_arn
  server_protocol = "HTTP"
  enable_vpc = var.enable_vpc
  vpc_id = var.vpc_id
  subnet_ids = var.subnet_ids

  env = merge({
    RUNTIME_CONFIG_APP_ID = var.appconfig_application_id
  }, var.env)
  additional_iam_policy_statements = concat([
    {
      Effect   = "Allow"
      Action   = [
        "appconfig:StartConfigurationSession",
        "appconfig:GetLatestConfiguration"
      ]
      Resource = ["\${var.appconfig_application_arn}/*"]
    },
    # Grant access for the agent to invoke bedrock models
    {
      Effect = "Allow"
      Action = [
        "bedrock:InvokeModel",
        "bedrock:InvokeModelWithResponseStream"
      ]
      Resource = [
        "arn:aws:bedrock:*:*:foundation-model/*",
        "arn:aws:bedrock:*:*:inference-profile/*"
      ]
    }
  ], var.additional_iam_policy_statements)
  tags = var.tags
}

# Add agent runtime ARN to runtime config
module "add_agent_runtime_to_runtime_config" {
  source = "../../../core/runtime-config/entry"

  namespace = "agentcore"
  key       = "agentRuntimes"
  value     = { "InMemoryTerraformAgent" = { arn = module.agent_core_runtime.agent_core_runtime_arn } }

  depends_on = [module.agent_core_runtime]
}

output "agent_core_runtime_role_arn" {
  description = "ARN of the agent core runtime role"
  value       = module.agent_core_runtime.agent_core_runtime_role_arn
}

output "agent_core_runtime_arn" {
  description = "ARN of the Bedrock Agent Core runtime"
  value       = module.agent_core_runtime.agent_core_runtime_arn
}

output "invocation_url" {
  description = "HTTPS invocation URL of the runtime"
  value       = module.agent_core_runtime.invocation_url
}

output "appconfig_application_id" {
  description = "AppConfig Application ID for runtime config (passthrough of the shared \`appconfig_application_id\` input)."
  value       = var.appconfig_application_id
}

output "security_group_id" {
  description = "Security group ID of the agent core runtime, for use in ingress rules on resources it must reach (e.g. a database). Null unless enable_vpc is true."
  value       = module.agent_core_runtime.security_group_id
}
"
`;
